--- a/style.css
+++ b/style.css
@@ -232,3 +232,10 @@ h2{
 #your{
     margin-left: 145%;
 }
+@media screen and (min-width: 1024px) {
+    .gfg-div {
+      background-color: wheat;
+      color: #fff;
+    }
+}
+
