--- a/style3.css
+++ b/style3.css
@@ -1,337 +1,378 @@
+#h1{
+  text-align: center;
+  font-weight: bold;
+}
 .container{
-    font-size: larger;
-    font-weight: 100px;
-    background-color: antiquewhite;
-  
-  }
-  #just{
-      margin-left: 42%;
-      display: flex;
-      font-size: large;
-  }
-  .cm{
-      margin-bottom: -84%;
-      margin-top: -3%;
-      margin-right: 39%;
-  
-    
-    }
-    #gy{
-      margin-left: 119%;
-     margin-bottom: 35%;
-    }
-    nav{
-      display: flex;
-      justify-content: space-between;
-      padding: 1px 10px;
-      margin: auto;
-      float: right;
-      /* margin-top: -2%; */
-      text-align: center;
-      margin: -1%;
-    
-    }
-    nav ul li{
-      list-style-type: none;
-      justify-content: space-between;
-      padding: 14px 16px;
-      text-align: center;
-      float: left;  
-    }
-    nav ul, li, a{
-      text-decoration: none;
-      text-align: center;
-      float: left;
-    }
-    #kilm{
-      display: flex;
-      margin-left: 16%;
-      font-size: larger;
-    margin-top: -31%;
-    /* margin-left: 22%; */
-    background-color: yellow;
-    /* padding: 10px 20px; */
-  
-    }
-    #logo{
-      margin-right: 16%;
-      background-color: yellow;
-    }
-    #cat{
-      margin-left: 49%;
-      background-color: yellow;
-    }
-    #fa{
-      margin-left: 69%;
-      background-color: yellow;
-    }
-    #nj{
-      margin-left: 79%;
-      background-color: yellow;
-    }
-    #mk{
-      margin-left: 99%;
-      background-color: yellow;
-    }
-    #lp{
-      border: none;
-      border-style: none;
-      margin-bottom: 8%;
-      margin-left: 2%;
-    }
-    #nl{
-      margin-left: 22%;
-      margin-top: -13%;
-      display: flex;
-    }
-    #k{
-      margin-left: 5%;
-    }
-    #f{
-      margin-top: -2%;
-      /* width: 320px; */
-      margin-left: 15%;
-      width: 1650px;
-    }
-    #lk{
-      margin-left: 6%;
-      margin-bottom: -6%;
-    }
-    #de{
-      margin-left: 15%;
-      margin-top: -8%;
-    }
-    #gn{
-      margin-left: 24%;
-      margin-top: -8%;
-    }
-    #ji{
-      margin-left: 34%;
-      margin-top: -6%;
-    }
-    #ko{
-      margin-left: 46%;
-      margin-top: -8%;
-    }
-    #kp{
-      margin-left: 57%;
-      margin-top: -8%;
-    }
-    #hi{
-      margin-left: 77%;
-      margin-top: -42%;
-    }
-    #v{
-      color: black;
-    }
-    #tr{
-      margin-left: 79%;
-    }
-    #y{
-      color: green;
-    }
-    #i{
-      color: black;
-      font-weight: 100px;
-    }
-    #p{
-      margin-left: 65%;
-      margin-top: -23%;
-      
-    }
-    #kq{
-      margin-left: 79%;
-      color: yellow;
-      font-weight: 200px;
-      font-size: 126%;
-    }
-    #n{
-      color: yellow;
-    }
-    #lp{
-      /* margin-left: 76%; */
-      /* margin-top: -3%; */
-    }
-    #kn{
-      /* margin-left: 18%; */
-      /* margin-top: -3%; */
-    }
-    #kk{
-      margin-left: 83%;
-    }
-    #pl{
-  
-    }
-    #kn{
-      margin-left: 93%;
-      margin-top: -15%;
-      display: flex;
-    }
-    #ux{
-      margin-left: 85%;
-      margin-top: -1%;
-    }
-    #hj{
-      margin-left: 86%;
-    }
-    #pl{
-      margin-left: 86%;
-      margin-top: -20%;
-    }
-    #ka{
-      margin-left: 75%;
-      margin-top: -5%;
-  
-    }
-    #rai{
-      margin-left: 139%;
-      margin-top: -27%;
-    }
-    #se{
-      color: red;
-    }
-    #ni{
-      color: green;
-    }
-    #nk{
-      color: green;
-    }
-    #ml{
-  
-    }
-    #jk{
-      color: yellow;
-      font-size: larger;
-      margin-left: 14%;
-      font-weight: 200px;
-    }
-    #ph{
-      margin-left: 35%;
-      margin-top: -6%;
-  
-    }#uj{
-      margin-left: 65%;
-      margin-top: -6%;
-  
-    }
-    #stmt{
-      margin-left: 12%;
-    }
-    #pix{
-      margin-left: 59%;
-      font-size: larger;
-      font-weight: 100px;
-      color: black;
-    }
-    #bn{
-      margin-left: -105%;
-    }
-    #lo{
-      margin-left: 12%;
-    }
-    #hj{
-      margin-left: -52%;
-    }
-    #uio{
-      margin-left: 52%;
-      font-size: larger;
-      font-weight: 100px;
-      color: black;
-    }
-    #lk{
-      margin-left: 18%;
-      margin-top: -5%;
-  
-    }
-    #np{
-      margin-left: 13%;
-      margin-top: -6%;
-      
-    }
-  #kpl{
-    margin-bottom: 5%;
-  }
-  #jkl{
-    margin-top: -6%;
-  
-  }
-  #ko{
-    margin-left: -8%;
-    /* margin-bottom: 25%; */
-  
-  }
-  #jkp{
-  
-  }
-  #plo{
-    margin-left: 37%;
-    margin-top: -13%;
-  }
-  #nks{
-    margin-left: 9%;
-    margin-top: -3%;
-  }
-  #njm{
-    margin-left: 46%;
-  }
-  #fk{
-    margin-left: 75%;
-    margin-top: -26%;
-  }
-  #ol{
-    margin-left: 106%;
-    margin-top: -26%;
-  }
-  #vv{
-    margin-top: -6%;
-  }
-  .footer{
-    background-color: blue;
-  
-  }
-  #l{
-    margin-left: 23%;
-    margin-top: -17%;
-  }
-  #i{
-    margin-left: 49%;
-    margin-top: -21%;
-  }
-  #k{
-    margin-left: 51%;
-    /* margin-top: -18%; */
-  }
-  #tu{
-    margin-left: 90%;
-    margin-top: -30%;
-  }
-  #kk{
-    margin-left: 9%;
-  }
-  #it{
-    margin-left: 135%;
-  }
-  #re{
-    display: flex;
-  }
-  #ji{
-    /* margin-bottom: 9%; */
-    margin-right: 1%;
-    margin-top:2%;
-  }
-  #lp{
-  
-  }
-  #bi{
-    margin-left: 4%;
-  }
-  #nu{
-    margin-left: 5%;
-  }
-  @media screen and (min-width: 1024px) {
-    .gfg-div {
-      background-color: wheat;
-      color: #fff;
-    }
+  background-color: wheat;
+}
+nav{
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 20% 10%;
+  padding-right: 20px;
+  margin-left: -2%;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+nav ul li{
+  list-style-type: none;
+  display: inline-block;
+  padding: 10px 20px;
+  justify-content: space-between;
+}
+nav ul li a{
+  color: black;
+  font-weight: bold;
+  text-decoration: none;
+  font-size: large;
+}
+#lg{
+  height: 40px;
+  border-radius: 10px;
+  margin-bottom: -2%;
+}
+.y{
+justify-content: space-between;
+padding: 20px;
+margin-top: -10%;
+background-color: yellow;
+}
+#logo{
+font-size: 30px;
+font-weight: bold;
+color: white;
+}
+#cat{
+padding: 10px 80px;
+border-radius: 5px;
+margin-left: 5%;
+padding-left: 10px;
+font-size: 20px;
+}
+#search{
+margin-left: 8%;
+border: solid;
+padding: 10px 280px;
+border-radius: 10px;
+padding-left:15px;
+background-color: white;
+}
+#heart{
+margin-left: 24%;
+font-size: 28px;
+}
+#cart{
+margin-left: 1% ;
+font-size: 28px;
+}
+#user{
+margin-left: 1%;
+font-size: 28px;
+}
+/* #Kim{
+  text-align: center;
+  font-size: 39px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: bold;
+} */
+.product{
+  margin-top: 12%;
+}
+.coconut{
+  margin-left: 8%;
+  margin-top: 1%;
+}
+#x1{
+  margin-left: 5%;
+ height: 300px;
+}
+#on{
+  margin-left: 5%;
+  margin-top: 2%;
+  border-radius: 10px;
+  background-color: purple;
+  color: white;
+ }
+ #mid{
+  margin-left: 43%;
+  margin-top: -22%;
+  font-weight: bold;
+  font-size: 32px;
+ }
+ #walk{
+  margin-left:43% ;
+  margin-top: -2%;
+ }
+#flip{
+  color: yellow;
+}
+.us{
+  margin-left: 43%;
+}
+#a{
+  font-weight: bolder;
+  color: green;
+}
+#area{
+ font-size: 20px;
+ font-weight: bolder;
+}
+#ris{
+  color: white;
+  font-size: 15px;
+  background-color: grey;
+}
+#mm{
+  color: white;
+  font-size: 15px;
+  background: yellow;
+}
+#laso{
+margin-left: 43%;
+}
+#like{
+margin-left: 3%;
+background-color: yellow;
+border-radius: 10px;
+padding: 5px 5px;
+}
+#bag{
+background-color: yellow;
+padding: 10px 40px;
+border-radius: 5px;
+color: white;
+}
+.lasi{
+margin-left: 43%;
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+font-weight: bold;
+}
+#ce{
+margin-left: 45%;
+color: purple;
+margin-top: -4%;
+}
+#lea{
+margin-left: 46%;
+color: green;
+margin-top: -4%;
+}
+#ai{
+margin-left: 46%;
+color: green;
+margin-top: -4%;
+}
+.ly{
+margin-top: -4%;
+margin-left: 6%;
+}
+#x2{
+height: 60px;
+}
+#x3{
+height: 60px;
+}
+#x4{
+height: 60px;
+}
+#x5{
+height: 60px;
+}
+#x6{
+height: 60px;
+margin-left: 1%;
+}
+#about{
+margin-left: 15%;
+background-color: yellow;
+padding: 10px 80px;
+border-radius: 10px;
+}
+#reviews{
+margin-left: 2%;
+background-color: grey;
+padding: 10px 40px;
+border-radius: 10px;
+}
+#videos{
+margin-left: 4%;
+background-color: grey;
+padding: 10px 40px;
+border-radius: 10px;
+}
+.co{
+margin-top: 6%;
+margin-left: 13%;
+}
+#hr{
+margin-top: -0.1%;
+}
+#rise{
+margin-left: 25%;
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+#h2{
+text-align: center;
+font-size: 40px;
+}
+.red{
+margin-left: 23%;
+}
+#x8{
+border-radius: 18px;
+border-color: yellow;
+}
+#x9{
+border-radius: 18px;
+border-color: yellow;
+margin-left: 2%;
+}
+#x10{
+margin-left: 37%;
+border-radius: 18px;
+border-color: yellow;
+}
+#to{
+text-align: center;
+font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+font-size: 40px;
+}
+#x11{
+margin-left: 8%;
+height: 180px;
+}
+#x12{
+margin-left: 8%;
+height: 180px;
+}
+#x13{
+margin-left: 5%;
+height: 180px;
+}
+#x14{
+margin-left: 6%;
+height: 180px;
+}
+#lucky{
+margin-left: 25%;
+background-color: grey;
+border-radius: 10px;
+padding: 5px 5px;
+}
+#b1{
+margin-left: 7%;
+margin-top: 2%;
+border-radius: 10px;
+background-color: crimson;
+color: white;
+}
+#nelly{
+margin-left: 9%;
+background-color: grey;
+border-radius: 10px;
+padding: 5px 5px;
+}
+#liz{
+margin-left: 22%;
+background-color: grey;
+border-radius: 10px;
+padding: 5px 5px;
+}
+#b2{
+margin-left: 7%;
+margin-top: 2%;
+border-radius: 10px;
+background-color: crimson;
+color: white;
+}
+#mercy{
+margin-left: 6%;
+background-color:grey;
+border-radius: 10px;
+padding: 5px 5px;
+}
+#P{
+margin-left: 11%;
+}
+#bah{
+margin-left: 35%;
+margin-top: -4%;
+}
+#ship{
+margin-left: 59%;
+margin-top: -3%;
+}
+#sheep{
+margin-left: 82%;
+margin-top: -4%;
+}
+.mokos{
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+font-weight: bold;
+}
+#ody{
+margin-left: 19%;
+}
+#kili{
+margin-left: 35%;
+margin-top: -2%;
+}
+#kathi{
+margin-left: 46%;
+margin-top:-3% ;
+}
+#recho{
+margin-left: 62%;
+margin-top: -2%;
+}
+#MU{
+margin-left: 74%;
+margin-top: -2%;
+}
+#tip{
+margin-left: 85%;
+margin-top: -2%;
+}
+#s1{
+margin-left: 15%;
+}
+#s3{
+margin-left: 38%;
+margin-top: -2.1%;
+}
+#s5{
+margin-left:65% ;
+margin-top: -2.4%;
+}
+#s7{
+margin-left: 85%;
+margin-top: -2.7%;
+}
+.footer{
+margin-top: 8%;
+display: flex;
+background-color: navy;
+font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+font-weight: bolder;
+color: black;
+justify-content: space-between;
+}
+.house{
+display: flex;
+color: black;
+font-weight: bolder;
+background-color: navy;
+}
+#hut{
+font-weight: bolder;
+font-size: 23px;
+}
+#cy{
+margin-left: 12%;
+}
+#cooky{
+margin-left: 10%;
+}
+#vor{
+margin-left: 10%;
 }
   
